[package]
name = "rorm-db"
version = "0.8.1"
edition = "2021"
categories = ["database"]
keywords = ["async", "orm", "database", "orm"]
repository = "https://github.com/rorm-orm/rorm-db"
authors = ["myOmikron <git@omikron.dev>"]
homepage = "https://rorm.rs"
documentation = "https://docs.rorm.rs"
license = "MIT"
description = "The inner database abstraction layer from rorm."

[lib]
name = "rorm_db"

[dependencies]
rorm-sql = { version = "~0.6", path = "../rorm-sql" }
rorm-declaration = { version = "~0.3", path = "../rorm-declaration" }

# Abstractions for asynchronous programming.
futures = { version = "~0.3" }

# Allow wrapping futures and streams
pin-project = { version = "~1" }

# SQL executor. Optional because it requires a runtime and a TLS implementation.
# A compile error will be thrown if no runtime is chosen.
sqlx = { version = "~0.7", optional = true }

# Logging facade
log = { version = "~0.4" }

# Serialization
serde = { version = "~1" }

[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.docs.rs]
features = ["default"]

[features]
default = [
    "sqlx-all-supported-extensions",
    "all-driver",
    "serde/derive",
    "log/serde"
]

all-driver = [
    "mysql",
    "postgres",
    "sqlite"
]

mysql = [
    "sqlx?/mysql",
    "rorm-sql/mysql",
]
postgres = [
    "sqlx?/postgres",
    "rorm-sql/postgres",
]
sqlite = [
    "sqlx?/sqlite",
    "rorm-sql/sqlite"
]

sqlx-all-supported-extensions = [
    "sqlx?/chrono",
    "sqlx?/any",
]

async-std = []
async-std-native-tls = [
    "sqlx/runtime-async-std-native-tls",
    "async-std",
]
async-std-rustls = [
    "sqlx/runtime-async-std-rustls",
    "async-std",
]

tokio = []
tokio-native-tls = [
    "sqlx/runtime-tokio-native-tls",
    "tokio"
]
tokio-rustls = [
    "sqlx/runtime-tokio-rustls",
    "tokio"
]
